# formations

./: LICENSE  README.md  formations.cabal  stack.yaml
data/: action_intrans.txt  action_trans.txt  appearance.txt  border.txt  bordered.txt  colour.txt  disappearance.txt  growth.txt  hyponyms.py  juxtaposed.txt  pattern.txt  patterned.txt  preposition.txt  region.txt  shape.txt  shape2d.txt  shapes.txt  some.txt  test.txt  verbintrans.txt  verbtrans.txt
output/: formations.md  sample.txt  sample_10.md  sample_11.md  sample_2.txt  sample_3.md  sample_4.md  sample_5.md  sample_6.md  sample_7.md  sample_8.md  sample_9.md
src/: Main.hs
