name:                formations
version:             0.1.0.0
synopsis:            NaNoGenMo17
description:         A generator of abstract descriptions
homepage:            https://github.com/spikelynch/formations#readme
license:             BSD3
license-file:        LICENSE
author:              Mike Lynch
maintainer:          mike@mikelynch.org
copyright:           2017 Mike Lynch
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable formations
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , containers
                     , regex-posix
                     , directory
                     , random
                     , monad-loops
                     , blaze-markup
                     , textgen >= 0.5.3

source-repository head
  type:     git
  location: https://github.com/spikelynch/formations
